@@ -19,6 +19,8 @@
        browser dialog when exporting. (Stefan)
 - BUG: The number of selected items was shown wrong in the commit dialog
        if an unversioned or deleted item was checked. (Stefan)
+- BUG: Add 'Compare with WC/BASE' options to 'Check for Modification'.
+       See issue #106. (Stefan)
 
 Version 1.2
 
